[package]
name = "rtd"
version = "0.1.0"
description = "A TUI Application for managing projects and todo items, written in Rust."
authors = ["hmcln <hamish@condor.net.au>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
serde_json = "1.0.143"
