[package]
name = "rtd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.42"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v4"] }
xdg = "3.0.0"
